Remove position: absolute from .player-seat to fix layout issues

--- a/blackjack.css
+++ b/blackjack.css
@@ -47,13 +47,7 @@
     align-self: center;
 }
 
-.player-seat {
-    position: absolute;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    pointer-events: auto;
-}
+/* Removed position: absolute from .player-seat to fix layout */
 
 .player-cards {
     display: flex;
